package jp.kujira.ais.information;

/**
 * Created by Kujira on 2017/04/03.
 */
public abstract class AbstractInformation implements Information {
}
