package jp.kujira.ais.information;

/**
 * Created by Kujira on 2017/04/03.
 */
public class ICTInformation extends AbstractInformation implements Information {
}
