package jp.kujira.ais.information;

/**
 * Created by Kujira on 2017/04/03.
 */
public class KnowHow extends AbstractInformation {
}
