package jp.kujira.ais.provider;

/**
 * Created by Kujira on 2017/04/03.
 */
public class Providers {
}
