package jp.kujira.ais.server;

/**
 * Created by Kujira on 2017/04/03.
 */
public abstract class AbstractServerAgent implements ServerAgent {
}
