package jp.kujira.ais.server;

/**
 * Created by Kujira on 2017/04/03.
 */
public class InformationNegotiationAgent extends AbstractServerAgent implements ServerAgent {
}
